--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,7 +6,10 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
     "react": "^15.4.1",
+    "react-bootstrap-native-slider": "^2.0.1",
     "react-bootstrap-slider": "^1.1.3",
     "react-dom": "^15.4.1"
   },
